--- a/src/index.css
+++ b/src/index.css
@@ -32,12 +32,17 @@ header {
 form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   padding: 20px;
   gap: 20px;
   background-color: white;
   border-radius: 4px;
+}
+
+button {
+  align-self: center;
+  width: auto;
 }
 
 label {
@@ -73,4 +78,44 @@ label {
   /* justify-content: center; */
   width: 100%;
   height: 100vh;
+}
+
+.input-container {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  flex-wrap: nowrap;
+  max-width: 100%;
+}
+
+.base-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  gap: 20px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  max-width: 700px;
+}
+
+.base-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  padding: 20px;
+  gap: 20px;
+  background-color: white;
+  border-radius: 4px;
+  max-width: 500px;
+}
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
